--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -13,7 +13,7 @@ $red: #ef434e;
 $gray-dark: #323232;
 $gray-light: #969696;
 
-$background: linear-gradient(90deg, $blue 0%, $red 200%);
+$background: linear-gradient(90deg, #111e6c 0%, #ef434e 200%);
 
 body {
     font-family: "Monserrat", sans-serif;
