--- a/src/Components/Filter/Filter.css
+++ b/src/Components/Filter/Filter.css
@@ -1,5 +1,3 @@
-@import "../../mystyles.scss";
-
 .tabs {
     width: 70%;
     @media screen and(max-width:570px) {
@@ -17,6 +15,6 @@
     flex-shrink: 0;
 }
 .tabs.is-toggle li.is-active a {
-    background-color: $gray-light !important;
-    border-color: $gray-light !important;
+    background-color: #969696 !important;
+    border-color: #969696 !important;
 }
