--- a/src/Components/FilterPanel/FilterPanel.css
+++ b/src/Components/FilterPanel/FilterPanel.css
@@ -1,4 +1,3 @@
-@import '../../mystyles.scss';
 .panel-custom {
     position: absolute;
     z-index: 1;
@@ -13,7 +12,7 @@
 }
 
 .panel-heading {
-    background: $background;
+    background: linear-gradient(90deg, #111e6c 0%, #ef434e 200%);
     color:#ffffff;
 }
 @media screen and(max-width:570px) {
